# stream-stuff

./: README.md  pyproject.toml
agentic-rag/: README.md
agentic-rag/src/agentic_rag/: llm_interface.py
src/agentic_rag/: main.py  mcp_client.py  rag_pipeline.py  scraping.py
tests/: test_rag_pipeline.py
